SERVER-35677 always log a prepare oplog entry on prepareTransaction